--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,41 @@
-<h2>Change your password</h2>
+<section class="container mx-auto max-w-lg mt-10 mb-10 px-8">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+  <!-- Heading -->
+  <h2 class="text-2xl font-bold mb-6">Change your password</h2>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: "space-y-6" }) do |f| %>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= f.hidden_field :reset_password_token %>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
+    <!-- New password -->
+    <div class="mb-4 mt-4">
+      <%= f.label :password, "New password", class: "block mb-1 font-medium" %>
+      <% if @minimum_password_length %>
+        <em class="block mb-1 text-sm text-gray-600">(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+      <%= f.password_field :password,
+                           autofocus: true,
+                           autocomplete: "new-password",
+                           class: "w-full border border-black p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <!-- Confirm new password -->
+    <div class="mb-4 mt-4">
+      <%= f.label :password_confirmation, "Confirm new password", class: "block mb-1 font-medium" %>
+      <%= f.password_field :password_confirmation,
+                           autocomplete: "new-password",
+                           class: "w-full border border-black p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+    </div>
+
+    <!-- Submit button -->
+    <div class="mb-4 mt-4">
+      <%= f.submit "Change my password",
+                   class: "px-4 py-2 border border-black hover:bg-gray-200 cursor-pointer" %>
+    </div>
+
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+
+</section>
