--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,51 @@
-<h2>Sign up</h2>
+<section class="container mx-auto max-w-lg mt-10 mb-10 px-8">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <!-- Heading -->
+  <h2 class="text-2xl font-bold mb-6">Sign up</h2>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "space-y-6" }) do |f| %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <!-- Username -->
+    <div class="mb-4 mt-4">
+      <%= f.label :username, class: "block mb-1 font-medium" %>
+      <%= f.text_field :username, autofocus: true, autocomplete: "username",
+          class: "w-full border border-black p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <!-- Email -->
+    <div class="mb-4 mt-4">
+      <%= f.label :email, class: "block mb-1 font-medium" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email",
+          class: "w-full border border-black p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <!-- Password -->
+    <div class="mb-4 mt-4">
+      <%= f.label :password, class: "block mb-1 font-medium" %>
+      <% if @minimum_password_length %>
+        <em class="text-sm text-gray-600">(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+      <%= f.password_field :password, autocomplete: "new-password",
+          class: "w-full border border-black p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+    </div>
+
+    <!-- Password Confirmation -->
+    <div class="mb-4 mt-4">
+      <%= f.label :password_confirmation, class: "block mb-1 font-medium" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password",
+          class: "w-full border border-black p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+    </div>
+
+    <!-- Submit button -->
+    <div class="mb-4 mt-4">
+      <%= f.submit "Sign up",
+          class: "px-4 py-2 border border-black hover:bg-gray-200 cursor-pointer" %>
+    </div>
+
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+
+</section>
