--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,12 +1,13 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation" data-turbo-cache="false">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
+  <div id="error_explanation" data-turbo-cache="false" class="mb-6 p-4 border border-red-400 bg-red-100 text-red-800 rounded">
+    <h2 class="font-bold mb-2">
+      <%= I18n.t(
+        "errors.messages.not_saved",
+        count: resource.errors.count,
+        resource: resource.class.model_name.human.downcase
+      ) %>
     </h2>
-    <ul>
+    <ul class="list-disc pl-5">
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
