--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,29 @@
-<h2>Resend unlock instructions</h2>
+<section class="container mx-auto max-w-lg mt-10 mb-10 px-8">
 
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <!-- Heading -->
+  <h2 class="text-2xl font-bold mb-6">Resend unlock instructions</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post, class: "space-y-6" }) do |f| %>
 
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
-<% end %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= render "devise/shared/links" %>
+    <!-- Email field -->
+    <div>
+      <%= f.label :email, class: "block mb-1 font-medium" %>
+      <%= f.email_field :email,
+                        autofocus: true,
+                        autocomplete: "email",
+                        class: "w-full border border-black p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+    </div>
+
+    <!-- Submit button -->
+    <div>
+      <%= f.submit "Resend unlock instructions",
+                   class: "px-4 py-2 border border-black hover:bg-gray-200 cursor-pointer" %>
+    </div>
+
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+
+</section>
