--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,33 +1,45 @@
-<h1>Edit your post!</h1>
+<%= render 'layouts/nav' %>
 
-<%= form_with model: @post do |form| %>
-<% if @post.errors.any? %>
-    <div>
-      <h3><%= pluralize(@post.errors.count, "error") %> prevented this post from being saved:</h3>
-      <ul>
-        <% @post.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
+<div class="mt-12 p-6 container mx-auto max-w-xl">
+  <%= link_to request.referrer || root_path do %>
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 cursor-pointer hover:bg-gray-200 rounded mb-4">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
+    </svg>
   <% end %>
 
-  <div class="field">
-  <%= form.label :images, "Upload Images" %><br>
-  <%= form.file_field :images, multiple: true %>
-  </div>
-  
-  <div>
-    <%= form.label :title, "Title" %><br>
-    <%= form.text_field :title %>
-  </div>
+  <div class="p-6 border border-black-200">
+    <h1 class="text-2xl font-semibold mb-4">Edit your post!</h1>
 
-  <div>
-    <%= form.label :body, "Content" %><br>
-    <%= form.text_area :body %>
-  </div>
+    <%= form_with model: @post do |form| %>
+    <% if @post.errors.any? %>
+        <div class="mb-4 p-4 bg-red-100 border border-red-300 text-red-700 rounded">
+          <h3 class="font-semibold mb-2"><%= pluralize(@post.errors.count, "error") %> prevented this post from being saved:</h3>
+          <ul class="list-disc pl-5">
+            <% @post.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-  <div>
-    <%= form.submit "Edit Post" %>
+      <div class="mb-4">
+      <%= form.label :images, "Upload Images" %><br>
+      <%= form.file_field :images, multiple: true, class: "w-full border border-gray-300 p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+      </div>
+      
+      <div class="mb-4">
+        <%= form.label :title, "Title" %><br>
+        <%= form.text_field :title, class: "w-full border border-gray-300 p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+      </div>
+
+      <div class="mb-4">
+        <%= form.label :body, "Content" %><br>
+        <%= form.text_area :body, rows: 8, class: "w-full border border-gray-300 p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+      </div>
+
+      <div>
+        <%= form.submit "Edit Post", class: "px-3 py-1 rounded cursor-pointer hover:bg-gray-100 border border-gray-300" %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
