--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="flex flex-col gap-y-6 p-4">
 <% @posts.each do |post| %>
-    <div class="post w-full mx-auto max-w-lg bg-white p-4 sm:p-6 border border-black-200">
+    <div class="post w-full mx-auto max-w-lg p-4 sm:p-6 border border-black-200">
       <h1 class="title text-xl font-bold mb-2" ><%= post.title %></h1>
       <div class="flex items-center gap-x-2 mb-2">
         <p class="author text-md text-gray-500 mb-2 hover:underline cursor-pointer"><em><%= link_to post.user.username, user_path(post.user.id) %></em></p>
