--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,34 +1,46 @@
-<h1>What's on your mind? </h1>
+<%= render 'layouts/nav' %>
 
-<%= form_with model: @post, html: { multipart: true } do |form| %>
-  <% if @post.errors.any? %>
-    <div style="color: red;">
-      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
-      <ul>
-        <% @post.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
+<div class="mt-12 p-6 container mx-auto max-w-xl">
+
+  <%= link_to root_path do %>
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 cursor-pointer hover:bg-gray-200 rounded mb-4">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
+    </svg>
   <% end %>
 
-<div class="field">
-  <%= form.label :images, "Upload Images" %><br>
-  <%= form.file_field :images, multiple: true %>
-</div>
+  <div class="p-6 border border-black-200">
+    <h1 class="text-2xl font-semibold mb-4">What's on your mind? </h1>
 
-<div>
-  <%= form.label :title %>
-  <%= form.text_field :title %>
-</div>
+    <%= form_with model: @post, html: { multipart: true } do |form| %>
+      <% if @post.errors.any? %>
+        <div style="color: red;" class="mb-4 p-4 bg-red-100 border border-red-300 text-red-700 rounded">
+          <h2 class="font-semibold mb-2"><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+          <ul class="list-disc pl-5">
+            <% @post.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-<div>
-  <%= form.label :body %>
-  <%= form.text_area :body %>
-</div>
+    <div class="mb-4">
+      <%= form.label :images, "Upload Images" %><br>
+      <%= form.file_field :images, multiple: true, class: "w-full border border-gray-300 p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+    </div>
 
-<div>
-  <%= form.submit "Create Post" %>
-</div>
+    <div class="mb-4">
+      <%= form.label :title %>
+      <%= form.text_field :title, class: "w-full border border-gray-300 p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+    </div>
 
-<% end %>
+    <div class="mb-4">
+      <%= form.label :body %>
+      <%= form.text_area :body, rows: 8, class: "w-full border border-gray-300 p-2 focus:outline-none focus:ring-2 focus:ring-blue-400" %>
+    </div>
+
+    <div>
+      <%= form.submit "Create Post", class: "px-3 py-1 rounded cursor-pointer hover:bg-gray-100 border border-gray-300" %>
+    </div>
+    <% end %>
+  </div>
+</div>
