--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,19 +1,25 @@
-<h1><%= @user.username%>'s followers:</h1>
+<section class="container mx-auto mt-10 mb-10 px-8">
 
-<% if @followers.any? %>
-  <ul>
-    <% @followers.each do |follower| %>
-      <li>
-        <%= follower.username %>
-        <% if follower != current_user %>
-          <% follow = current_user.passive_follows.find_by(follower_id: follower.id) %>
-          <% if follow %>
-            <%= button_to "Remove follow", follow_path(follow.id), method: :delete, data: { confirm: "Are you sure you want to remove this follower?" } %>
+  <!-- Followers heading -->
+  <h1 class="text-2xl font-bold mb-4"><%= @user.username %>'s Followers:</h1>
+
+  <% if @followers.any? %>
+    <ul class="space-y-4">
+      <% @followers.each do |follower| %>
+        <li class="flex justify-between items-center border border-black p-4 hover:bg-gray-50 mb-4 mt-4">
+          <span class="font-medium"><%= follower.username %></span>
+
+          <% if follower != current_user %>
+            <% follow = current_user.passive_follows.find_by(follower_id: follower.id) %>
+            <% if follow %>
+              <%= button_to "Remove follow", follow_path(follow.id), method: :delete, data: { confirm: "Are you sure you want to remove this follower?" }, class: "px-3 py-1 border border-black hover:bg-red-100 text-red-600 cursor-pointer" %>
+            <% end %>
           <% end %>
-        <% end %>
-      </li>
-    <% end %>
-  </ul>
-<% else %>
-  <p>No followers yet.</p>
-<% end %>
+        </li>
+      <% end %>
+    </ul>
+  <% else %>
+    <p class="mt-4 text-gray-600">No followers yet.</p>
+  <% end %>
+
+</section>
