--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,52 +1,77 @@
-<%= link_to "My profile", user_path(current_user.id) %>
-<%= link_to "Edit my profile", edit_user_registration_path %>
-<%= link_to "Feed", posts_path %>
+<%= render 'layouts/nav' %>
 
-<%= button_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" }%>
-<%= button_to "Signup", new_user_registration_path, method: :get %>
-<%= button_to "Signin", new_user_session_path, method: :get %>
+<section class="post container mx-auto mt-10 mb-10 px-8">
 
-<%= button_to "Create new Post!", new_post_path, method: :get %>
+  <!-- Profile heading -->
+  <h1 class="text-2xl font-bold mb-2 mt-4"><%= @user.username %>'s profile</h1>
 
-<h1><%= @user.username %>'s Profile</h1>
+  <!-- Profile image -->
+  <%= image_tag @user.avatar_url, alt: "Profile photo", class: "profile-photo" %>
 
-<p>Email: <%= @user.email %></p>
+  <!-- Email -->
+  <p class="mb-2"><%= @user.email %></p>
 
-<%= image_tag current_user.avatar_url, alt: "Profile photo" %>
+ <!-- Edit profile link block -->
+  <div class="edit-my-profile-container hover:bg-gray-200 border border-black">
+    <%= link_to "Edit profile", edit_user_registration_path, class: "py-2" %>
+  </div>
 
-<p>
-  <%= link_to "Following: #{@user.followings.count}", followings_user_path(@user.id) %> 
-  <%= link_to "Followers: #{@user.followers.count}", followers_user_path(@user.id) %>
-  <% if @user == current_user %>
-  <%= link_to "Follow request: #{@user.pending_followers.count}", pending_followers_user_path(@user.id) %>
-  <% end %>
-</p>
+  <!-- Following / Followers -->
+  <div class="flex flex-row items-center space-x-4 mb-4 mt-4">
+    <%= link_to "Following: #{@user.followings.count}", followings_user_path(@user.id), class: "text-blue-600 hover:underline mr-4" %> 
+    <%= link_to "Followers: #{@user.followers.count}", followers_user_path(@user.id), class: "text-blue-600 hover:underline mx-4" %>
+    <% if @user == current_user %>
+      <%= link_to "Follow request: #{@user.pending_followers.count}", pending_followers_user_path(@user.id), class: "text-blue-600 hover:underline mx-4" %>
+    <% end %>
+  </div>
 
-<hr>
+  <hr class="my-6 border-black">
 
-<h2>Posts by <%= @user.username %>:</h2>
+  <!-- Posts -->
+  <h2 class="text-2xl font-semibold mb-4 mt-4">Posts by <%= @user.username %>:</h2>
 
-<% if @posts.any? %>
-  <% @posts.each do |post| %>
-    <div class="post">
-      <h3><%= post.title %></h3>
-      <% if post.images.attached? %>
-        <% post.images.each do |image| %>
-        <%= image_tag image%>
+  <div class="flex flex-col gap-y-6">
+  <% if @posts.any? %>
+    <% @posts.each do |post| %>
+      <div class="border border-black mb-6 p-4 hover:bg-gray-50">
+        <h3 class="text-xl font-bold mb-2"><%= post.title %></h3>
+
+        <% if post.images.attached? %>
+          <% post.images.each do |image| %>
+            <%= image_tag image, class: "w-full max-w-md mb-2" %>
+          <% end %>
         <% end %>
-      <% end %>
-      <p><%= post.body %></p>
-      <%= link_to "View Post", post_path(post) %>
-      <% if @user == current_user %>
-      <%= link_to "Edit Post", edit_post_path(post) %>
-      <%= button_to "Delete Post", post_path(post.id), method: :delete, data: { confirm: "Are you sure?" } %>
-      <% end %>
-    </div>
-  <% end %>
-<% else %>
-  <p>This user has no posts yet.</p>
-<% end %>
 
-<% if @user == current_user %>
-<%= button_to "Create new Post!", new_post_path, method: :get %>
-<% end %>
+        <p class="mb-4"><%= post.body %></p>
+
+        <div class="flex flex-row justify-between items-center">
+        <%= link_to "View", post_path(post), class: "text-blue-600 hover:underline mr-2" %>
+        <% if @user == current_user %>
+          <div class="flex gap-5">
+            <%= link_to edit_post_path(post), class: "text-blue-600 hover:underline mr-2" do %>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6 cursor-pointer hover:bg-blue-100 rounded fill-blue-800">
+                <path d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-8.4 8.4a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32l8.4-8.4Z" />
+                <path d="M5.25 5.25a3 3 0 0 0-3 3v10.5a3 3 0 0 0 3 3h10.5a3 3 0 0 0 3-3V13.5a.75.75 0 0 0-1.5 0v5.25a1.5 1.5 0 0 1-1.5 1.5H5.25a1.5 1.5 0 0 1-1.5-1.5V8.25a1.5 1.5 0 0 1 1.5-1.5h5.25a.75.75 0 0 0 0-1.5H5.25Z" />
+              </svg>
+            <% end %>
+            <%= button_to post_path(post.id), method: :delete, data: { confirm: "Are you sure?" }, class: "text-red-600 hover:underline" do %>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6 cursor-pointer hover:bg-red-100 rounded fill-red-600">
+                <path fill-rule="evenodd" d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z" clip-rule="evenodd" />
+              </svg>
+            <% end %>
+          </div>
+        <% end %>
+        </div>
+
+      </div>
+    <% end %>
+  <% else %>
+    <p>This user has no posts yet.</p>
+  <% end %>
+
+  <% if @user == current_user %>
+    <%= link_to "Create new Post!", new_post_path, class: "create-post-btn inline-block px-4 py-2 border border-black hover:bg-gray-200 text-center" %>
+  <% end %>
+  </div>
+
+</section>
